tests/NormalTests/paczka1/small_fuzzy/21863306.err
Error in line 2: Ac2wIu A902 19,59
Error in line 5: 9CkK3KA9XW A471 22,53
Error in line 8: 9CkK3KA9XW A471 58,0
